# katha-sutra

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO  GOVERNANCE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  deny.toml  justfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  source.yml
.github/workflows/: ci.yml
config/: kathasutra.example.toml
crates/kathasutra-application/: Cargo.toml
crates/kathasutra-application/src/: lib.rs
crates/kathasutra-auth/: Cargo.toml
crates/kathasutra-auth/src/: lib.rs
crates/kathasutra-domain/: Cargo.toml
crates/kathasutra-domain/src/: lib.rs
crates/kathasutra-persistence/: Cargo.toml
crates/kathasutra-persistence/src/: lib.rs
crates/kathasutra-plugin-sdk/: Cargo.toml
crates/kathasutra-plugin-sdk/src/: lib.rs
crates/kathasutra-server/: Cargo.toml
crates/kathasutra-server/src/: main.rs
crates/kathasutra-source-runtime/: Cargo.toml
crates/kathasutra-source-runtime/src/: lib.rs
docs/: PRD-katha-sutra.md
docs/PRD/: part-1.md  part-2.md  part-3.md  part-4.md
wit/: kathasutra-source.wit
