[workspace]
resolver = "3"
members = [
  "crates/kathasutra-application",
  "crates/kathasutra-auth",
  "crates/kathasutra-domain",
  "crates/kathasutra-persistence",
  "crates/kathasutra-plugin-sdk",
  "crates/kathasutra-server",
  "crates/kathasutra-source-runtime",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/thorion3006/katha-sutra"
authors = ["KathaSutra contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
