[package]
name = "kathasutra-server"
description = "KathaSutra server process and composition root"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kathasutra-domain = { path = "../kathasutra-domain" }

[lints]
workspace = true
